# project-nexus

./: .gitignore  HANDOFF.md  README.md
nexus-app/: machines.toml  package-lock.json  package.json  start-nexus.bat
nexus-app/src/: index.html  main.js  styles.css
nexus-app/src-tauri/: Cargo.toml  tauri.conf.json
nexus-app/src-tauri/src/: lib.rs  main.rs
